--- a/daugats_ApskatiLatviju-master/ApskatiLatviju/piedavajumi.html
+++ b/daugats_ApskatiLatviju-master/ApskatiLatviju/piedavajumi.html
@@ -11,9 +11,11 @@
 </head>
 <body>
 
-    <button class="login-button"><i class="fa-solid fa-lock"></i></button>
+    <button id="login-button"><i class="fa-solid fa-lock"></i></button>
+    <button id="user-button"><i class="fa-solid fa-user"></i></button>
     <img id="banner" src="Images/WebBanner.jpg" alt="WebBanner">
     <header>
+        
         <div class="logo"><img src="images/logo.png" alt="Logo">Apskati Latviju</div>
         <nav class="nav">
             <ul>
@@ -24,6 +26,43 @@
             </ul>
         </nav>
     </header>
+
+    <div class="burger">
+        <div class="logo"><img src="images/logo.png" alt="Logo">Apskati Latviju</div>
+        <div id="myLinks">
+            <a href="./index.html">Sākums</a>
+            <a href="./piedavajumi.html">Piedāvājumi</a>
+            <a href="./aktualitates.html">Aktualitātes</a>
+            <a href="./parmums.html">Par mums</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="burger()">
+          <i class="fa fa-bars"></i>
+        </a>
+    </div>
+
+    <div id="login-popup" style="display: none;">
+        <h2>Login</h2>
+        <form>
+          <div class="form-group">
+            <label for="username">Lietotājvārds</label>
+            <input type="text" id="username" name="username" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Parole</label>
+            <input type="password" id="password" name="password" required>
+          </div>
+          <button type="submit">Ieiet</button>
+        </form>
+    </div>
+
+    <div id="user-panel">
+        <p>Vārds Uzvārds</p>
+        <ul>
+            <li><button id="change-password-btn">Mainīt paroli</button></li>
+            <li><button id="edit-mods-btn">Rediģēt moderātorus</button></li>
+            <li><button id="logout-btn">Iziet</button></li>
+        </ul>
+    </div>
 
     <section id="piedavajumi">
         <div class="add">Pievienot <i class="fa-solid fa-plus"></i></div>
@@ -78,5 +117,9 @@
         <p>Aleksis Daugats &copy; 2023</p>
     </footer>
 
+    <script src="carousel.js"></script>
+    <script src="login.js"></script>
+    <script src="settings.js"></script>
+    <script src="burger.js"></script>
 </body>
 </html>
